--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -66,7 +66,7 @@ jobs:
       run: scp packed.tar taiyaki:$PROJECT/packed.tar
 
     - name: Un-tar source codes
-      run: ssh taiyaki tar -xf $PROJECT/packed.tar
+      run: ssh taiyaki tar -xf $PROJECT/packed.tar -C $PROJECT/
 
     - name: Starup contianers
       run: ssh taiyaki sudo docker compose -f $PROJECT/docker-compose.yml up --build
