Fix missing secret

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -50,9 +50,9 @@ jobs:
         cp docker-compose.yml docker-compose2.yml
         sed s/SECRET_DJ_KEY/${{ secrets.DJ_KEY }}/g docker-compose2.yml | \
         sed s/SECRET_HOSTNAME/${{ secrets.HOSTNAME }}/g | \
+        sed s/SECRET_DB_NAME/${{ secrets.DB_NAME }}/g | \
         sed s/SECRET_DB_USER/${{ secrets.DB_USER }}/g | \
         sed s/SECRET_DB_PASS/${{ secrets.DB_PASS }}/g > docker-compose.yml
-    - run: cat docker-compose.yml
     
     - name: Remove old files
       continue-on-error: true
