--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -49,7 +49,6 @@ USER wagtail
 
 # Collect static files.
 #RUN python manage.py collectstatic --noinput --clear
-CMD python manage.py collectstatic --noinput --clear
 
 # Runtime command that executes when "docker run" is called, it does the
 # following:
@@ -60,4 +59,4 @@ CMD python manage.py collectstatic --noinput --clear
 #   PRACTICE. The database should be migrated manually or using the release
 #   phase facilities of your hosting platform. This is used only so the
 #   Wagtail instance can be started with a simple "docker run" command.
-CMD set -xe; python manage.py migrate --noinput; gunicorn cms.wsgi:application
+CMD set -xe; python manage.py collectstatic --noinput --clear; python manage.py migrate --noinput; gunicorn cms.wsgi:application
