Add --host to dev and convert to config.js

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,7 +2,7 @@
   "name": "frontend",
   "version": "0.0.1",
   "scripts": {
-    "dev:only": "svelte-kit dev",
+    "dev:only": "svelte-kit dev --host",
     "build:only": "svelte-kit build",
     "package": "svelte-kit package",
     "preview": "svelte-kit preview",
