--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,13 +6,14 @@
     "build:only": "svelte-kit build",
     "package": "svelte-kit package",
     "preview": "svelte-kit preview",
-    "tailwind:watch": "cross-env TAILWIND_MODE=watch cross-env NODE_ENV=development  postcss src/styles/tailwind.css -o static/app.css -w",
-    "tailwind:build": "cross-env TAILWIND_MODE=build cross-env NODE_ENV=production  postcss src/styles/tailwind.css -o static/app.css",
+    "tailwind:watch": "cross-env TAILWIND_MODE=watch cross-env NODE_ENV=development  postcss src/styles/main.css -o static/app.css -w",
+    "tailwind:build": "cross-env TAILWIND_MODE=build cross-env NODE_ENV=production  postcss src/styles/main.css -o static/app.css",
     "dev": "concurrently \"npm run dev:only\" \"npm run tailwind:watch\"",
     "build": "npm run tailwind:build && npm run build:only",
     "check": "svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
     "lint": "prettier --ignore-path .gitignore --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
+    "lint:css": "stylelint **/*.css",
     "format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. .",
     "storybook": "start-storybook -p 6006 --ci",
     "build-storybook": "build-storybook"
