--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,11 @@ backend/db.sqlite3-journal
 backend/media/
 backend/static/
 
+# Frontend stuff:
+frontend/node_modules
+frontend/dist
+frontend/.svelte-kit
+
 # Environments
 venv/
 
