--- a/proxy/nginx.conf
+++ b/proxy/nginx.conf
@@ -20,8 +20,14 @@ http {
       root    /usr/share/nginx/html;
     }
 
-    location / {
+    location ~ ^/(django-admin|admin|documents|search|api)/  {
       proxy_pass http://backend:8000;
+      proxy_set_header Host $host;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    }
+
+    location / {
+      proxy_pass http://frontend:3000;
       proxy_set_header Host $host;
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
