Adjust proxy setting

--- a/proxy/nginx.conf
+++ b/proxy/nginx.conf
@@ -14,7 +14,7 @@ http {
 
   server {
     listen 80;
-    server_name sakura.phwu.work;
+    server_name sakura.phwu.work zh.sakura.phwu.work ja.sakura.phwu.work;
 
     location ~ ^/(media|static)/  {
       root    /usr/share/nginx/html;
