Change i18n to query, merge .gitignore, add api to Wagtail, add cros to django

--- a/.gitignore
+++ b/.gitignore
@@ -13,8 +13,13 @@ backend/static/
 
 # Frontend stuff:
 frontend/node_modules
+frontend/build
 frontend/dist
 frontend/.svelte-kit
+frontend/package
+frontend/.env
+frontend/.env.*
+frontend/!.env.example
 
 # Environments
 venv/
